fix: Alignment of 'Cancel modifications' button on taskjob

--- a/css/views.css
+++ b/css/views.css
@@ -258,6 +258,10 @@ td:not(#foo) > input[type=radio]:checked + label {
    font-weight: bolder;
 }
 
+#cancel_job_changes_button {
+  float: left;
+}
+
 /* Logs monitoring styles */
 
 .jobs_block {
